# openremote-sf

Android_Console/Android_Console_2_3_0/: AndroidManifest.xml  CHANGES.txt  LICENSE.txt
Android_Console_2_0_0_SNAPSHOT_20111012/: AndroidManifest.xml
Beehive/Beehive_3_0_0_Alpha1/config/: config.properties
Beehive/Beehive_3_0_0_Alpha2/config/: config.properties
Beehive/Beehive_3_0_0_Alpha3/config/: log4j.properties
Controller/: .classpath  build.xml
Controller/Controller_1_0_0_Beta2/web/: index.html
Controller/Controller_2_0_0_Alpha3/config/: applicationContext.xml
Controller/Controller_2_0_0_Alpha3/test/: testApplicationContext.xml
Controller/Controller_2_0_0_Alpha4/: build.xml
Controller/Controller_2_1_1/config/: applicationContext.xml
Controller/Controller_2_5_0_20160603/config/: velbus.properties
Controller/Controller_ProInstaller_1_1_1_20150824/pad/: prepare
Controller/Controller_ProInstaller_1_5_0_20160420/: CHANGES.txt  build.properties
Controller/Controller_Pro_1_1_0_20141218/: CHANGES.txt
Controller/config/: applicationContext.xml  spring-servlet.xml
Controller/web/: index.html
Controller_2_1_0_FM_SNAPSHOT-20130212-Lagarto/: CHANGES.txt
Controller_PRO_1_0_11_Credentials/: CHANGES.txt  build.properties
Controller_PRO_1_0_11_Credentials/test/: testApplicationContext.xml
Designer/Designer_2_0_0_Alpha4/war/: Modeler.jsp
Designer/Designer_2_0_0_Alpha9/: CHANGES.txt
Designer/Designer_2_11_0_Formosa_20120225/: .classpath
Designer/Designer_2_13_2_Rosemary_20120624/: build.properties
Designer/Designer_2_13_5_Rosemary_20120911/: CHANGES.txt
Designer/Designer_2_5_0_20160603/: build.properties
Designer/Designer_ProInstaller_1_0_0_20120919/: .project
Designer/Designer_ProInstaller_1_0_12_20140225/: CHANGES.txt
Designer/Designer_ProInstaller_1_0_13_20140505_buggy/: CHANGES.txt
Designer/Designer_ProInstaller_1_0_13_20140507/: build.xml
Designer/Designer_ProInstaller_1_0_15_20140918/war/: forget.jsp
Designer/UIDesigner_2_0_0_Alpha1/: .classpath
Designer/UIDesigner_2_0_0_Alpha5/config/: controller-config-2.0-M7.xml  log4j.properties
Designer/UIDesigner_2_0_0_Alpha7/config/: controllerXML.vm
Designer_2_0_0_Alpha10_20111226/config/: controller-config-2.0-M7.xml
Designer_2_0_0_Alpha7_SNAPSHOT_20110831/config/: panelXML.vm
Designer_2_14_0_June2014-MODELER-437-497-530/war/: login.jsp
FEATURE-KNXControllerEvent_R625_20090616/: .classpath
KNX/IPGateway/: KNX-Stack.m  KNXtest.h  KNXtest.m
KNX/IPGateway/Classes/: KNXServerDescription.m  KNXcEMIHeader.m  KNXconnection.m  KNXnetPacket.m
KNX/IPGateway/KNX-Stack.xcodeproj/: joerg.mode1v3
Manager/Beehive/: .classpath  build.xml  readme.txt
Manager/Beehive/config/: applicationContext.xml  config.properties  remotes.xml  spring-context.xml  spring-quartz.xml  spring-service-hibernate-impl.xml  spring-servlet.xml
Manager/UIComposer/: pom.xml  readme.txt
Manager/UIComposer/resources/: controller.xsd
OpenRemote_1_0_0_Milestone1/Controller_1_0_0_Beta2/config/: config.properties
OpenRemote_1_0_0_Milestone2/Beehive_2_0_0_Beta1/config/: log4j.properties
Panels/iPhone/: AccelerometerController.xib  Info.plist  appSettings.plist
WebConsole/WebConsole_2_0_0_Alpha2/: build.xml
WebConsole/WebConsole_2_1_4/: License
attic/RussoundSupport-mredeker/: .project
branches/Controller_1_0_0_Beta2_Branch/: readme.txt
branches/Controller_1_0_0_Betas/: build.xml
branches/Modeller_gwt_Branch/: .classpath  build.properties  build.xml  cp_jar_to_lib.bat  readme.txt
branches/UIComposer_1_0_0_Betas/: build.xml  readme.txt
branches/iPhone_Console_1_0_0_Betas/: appSettings.plist
iOS_Console_2_1_1/Classes/: ButtonParserAPI_v2_1.m  GridLayoutContainer.h  SliderSubController.h
iPad_Console_2_0_0_Betas_BeforeButtonEnhancements/Classes/: ControllerException.m  GestureWindow.h  GridCellView.h  Group.m  LabelView.m  LocalTask.h  LogoutHelper.h  NSStringAdditions.m  NotificationConstant.m  ORController.h  SliderView.m  SwitchView.m  URLConnectionHelper.m
iPad_Console_2_0_0_Betas_BeforeButtonEnhancements/openremote.xcodeproj/: project.pbxproj
mac/Controller_PRO_1_0_12_Credentials/: contributors.txt
mac/Controller_PRO_1_0_13_Credentials/: CHANGES.txt
mac/Controller_PRO_1_0_13_Credentials_ORCJAVA-443-449-440/: build.xml
mac/Controller_PRO_1_0_13_Credentials_ORCJAVA-443_NRSerial/: CHANGES.txt
mac/Controller_PRO_1_1_0_ORCJAVA-443-449-440/: CHANGES.txt
mac/Controller_PRO_1_1_0_ORCJAVA-443-449-440-478/: CHANGES.txt  build.xml
mac/Controller_PRO_1_3_0_ORCJAVA-443-449-478/: build.properties
mac/Controller_PRO_1_3_0_ORCJAVA-443-449-495-496-497-498-478-455-492-501/: CHANGES.txt
mac/Controller_PRO_1_3_0_ORCJAVA-443-449-495-496-497-498-478-455-492-501-503/: CHANGES.txt
mac/Controller_PRO_1_4_0_ORCJAVA-449-478-455-492-518-#22-#10-#14-WS/: build.xml
numericanal/Controller_Pro_1_2_0_Numericanal_20150608/: CHANGES.txt
projects/: README.txt
tags/Beehive_1_0_0/: .classpath
tinus/DataLoggingService_20131018/: .project  build.xml
trunk/Beehive/: build.xml
trunk/Controller/: .classpath  License  build.xml  contributors.txt
workspace/juha/Controller_2_1_0_FM_ORCJAVA-314/pad/src/test/c/: CMakeLists.txt
workspace/olivier/: .classpath
workspace/olivier/pad/: CMakeLists.txt  README
workspace/olivier/pad/apr-1.4.5/win32-x86/lib/: apr-1.lib
workspace/olivier/pad/src/main/c/: CMakeLists.txt  client.c  client.h  codes.h  dispatch.c  dispatch.h  linuxSerialPort.c  linuxSerialPort.h  main.c  osPort.h  port.c  port.h  portManager.c  portManager.h  serialPortDarwin.c  serialPortLinux.c  serialPortWindows.c  serialPortWindows.h  serialize.c  serialize.h  server.c  server.h  socket.c  socket.h  transaction.h
workspace/olivier/pad/src/test/c/: CMakeLists.txt  main.c  test.c  test.h
workspace/rhitz/Controller_EP_SNAP-EnOcean/pad/src/main/c/: CMakeLists.txt  serialPortDarwin.c  serialPortLinux.c  socket.h
workspace/rhitz/Controller_EP_SNAP_PAD_CMAKE/pad/: CMakeLists.txt  prepare.bat
workspace/rhitz/Controller_EP_SNAP_PAD_CMAKE/pad/src/main/c/: port.c  serialize.c  server.c
(+16801 files in other folders)
